Add fret number

--- a/web/guitarchordbuilder.html
+++ b/web/guitarchordbuilder.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="guitarchordbuilder.css">
   </head>
   <body>
-    <h1>GuitarChordBuilder</h1>
-    
+    <!--<h1>GuitarChordBuilder</h1> -->
+
     <canvas id="cvs"></canvas>
     <script type="application/dart" src="guitarchordbuilder.dart"></script>
     <script src="packages/browser/dart.js"></script>
